--- a/packages/web/app/app.css
+++ b/packages/web/app/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  @apply bg-slate-100 dark:bg-slate-900;
+
+  @media (prefers-color-scheme: dark) {
+    color-scheme: dark;
+  }
+}
